# satellite_collision_avoidance

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.local.json
benchmarks/: benchmark.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AlertsTab.tsx  CommandDock.tsx  ConjunctionPanel.tsx  DebrisPanel.tsx  DebrisTab.tsx  DraggablePanel.tsx  FloatingPanel.tsx  GlobeViewer.tsx  Header.tsx  ManeuverPanel.tsx  QuickTour.tsx  SatelliteDetailDrawer.tsx  SatellitePanel.tsx  SatellitesTab.tsx  SettingsTab.tsx  SidebarPanel.tsx  StatusBar.tsx  TimelineControl.tsx  TimelineTab.tsx  TopBar.tsx  UnifiedPanel.tsx  index.ts
frontend/src/hooks/: useSatellites.ts  useTheme.ts
frontend/src/types/: index.ts
frontend/src/utils/: tourStorage.ts
include/: collision_detector.hpp  collision_optimized.hpp  collision_probability.hpp  debris_model.hpp  grpc_server.hpp  history_recorder.hpp  maneuver_optimizer.hpp  satellite_system.hpp  sgp4.hpp  sgp4_optimized.hpp  simd_utils.hpp  tle_parser.hpp  tle_updater.hpp  types.hpp
proto/: orbit_ops.proto
src/: collision_detector.cpp  collision_optimized.cpp  collision_probability.cpp  debris_model.cpp  grpc_client_test.cpp  grpc_server.cpp  history_recorder.cpp  main.cpp  maneuver_optimizer.cpp  satellite_system.cpp  server_main.cpp  sgp4.cpp  sgp4_optimized.cpp  tle_parser.cpp  tle_updater.cpp
tests/: test_framework.hpp  test_main.cpp  test_sgp4_validation.cpp
